@@ -92,6 +92,7 @@ const IdStrMap ff_img_tags[] = {
     { AV_CODEC_ID_JPEGXL,     "jxl"      },
     { AV_CODEC_ID_QOI,        "qoi"      },
     { AV_CODEC_ID_RADIANCE_HDR, "hdr"    },
+    { AV_CODEC_ID_WBMP,       "wbmp"     },
     { AV_CODEC_ID_NONE,       NULL       }
 };
 
