@@ -1,0 +1,3 @@
+ebe2a887bd3098ac50502063257b4275 *tests/data/images/wbmp/02.wbmp
+12678 tests/data/images/wbmp/02.wbmp
+tests/data/images/wbmp/%02d.wbmp CRC=0xab19200d
