@@ -9,6 +9,7 @@ version <next>:
 - ffmpeg now runs every muxer in a separate thread
 - Add new mode to cropdetect filter to detect crop-area based on motion vectors and edges
 - VAAPI hwaccel for 8bit 444 HEVC and VP9
+- WBMP (Wireless Application Protocol Bitmap) image format
 
 
 version 5.1:
